tests/agl/rejections/type/pat_dup_pos_named.agl
enum Opt
  | Some(value: int)
  | None
let o: Opt = Some(value = 3)
case o of
  | Some(x, value = y) => print x
  | None => ()
